# 260_bot

./: .gitignore  CLAUDE.md  CLI-QUICK-START.md  SELENIUM_BACKEND_GUIDE.md  Windows部署指南.md  build_exe.py  build_pyinstaller.py  debug_navigation.py  debug_registration_result.py  demo_accounts.csv  detailed_cli_test.py  direct_cli_test.py  example_selenium_usage.py  main.py  page_inspector.py  pyproject.toml  state_machine_flow.md  state_machine_flow_corrected.md  step_debug.py  test_batch_registration.py  test_both_backends.py  test_cli_debug.py  test_cli_integration.py  test_duplicate_detection.py  test_fixed_batch_processing.py  test_fresh_account.py  test_gui.py  test_i18n.py  test_selenium_backend.py  test_simple_machine.py  test_single_registration.py  test_state_machine.py  test_transitions_methods.py  test_translation_core.py
.bmad-core/: install-manifest.yaml
.github/workflows/: build-windows.yml
docs/: architecture.md  brief.md  cli-usage-guide.md  development.md  front-end-spec.md  i18n_usage.md  prd.md  state_machine_guide.md
docs/architecture/: checklist-results.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  (+4 more)
i18n/: en-US.ts  zh-CN.ts
src/: account_generator.py  application.py  batch_creator_gui.py  cli.py  exceptions.py  gui_startup.py  rich_cli.py  startup.py  translation_manager.py
tests/: README.md  __init__.py  playwright_demo.py
(+68 files in other folders)
