[project]
name = "360-account-batch-creator"
version = "1.0.0"
description = "A desktop tool for batch creation of 360 accounts with GUI interface"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload",
]
dependencies = [
    "pyside6-essentials==6.9.1",
    "playwright>=1.44.0",
    "pywin32>=311; sys_platform == 'win32'",
    "faker>=37.6.0",
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.35.0",
    "setuptools>=80.9.0",
    "transitions>=0.9.3",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "selenium>=4.35.0",
    "undetected-chromedriver>=3.5.5",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.pyside6-project]
files = []
